add new resource for put
